# simple_flow

./: .gitignore  CMakeLists.txt  README.md
config/: fm_train.conf  lr_train.conf
examples/: CMakeLists.txt  fm_example.cpp  lr_example.cpp
include/: activation.h  data_reader.h  loss.h  metric.h  model.h  optimizer.h  trainer.h  utils.h
include/models/: fm.h  lr.h
include/simpleflow/: activation.h  data_reader.h  loss.h  metric.h  model.h  optimizer.h  trainer.h  types.h  utils.h
include/simpleflow/models/: fm.h  lr.h
include/simpleflow/utils/: config_parser.h  math_util.h
include/utils/: config_parser.h  math_util.h
src/: CMakeLists.txt  activation.cpp  data_reader.cpp  loss.cpp  metric.cpp  model.cpp  optimizer.cpp  trainer.cpp  trainer.h
src/models/: fm.cpp  lr.cpp
src/utils/: config_parser.cpp  math_util.cpp
tests/: CMakeLists.txt  activation_test.cpp  data_reader_test.cpp  fm_test.cpp  loss_test.cpp  lr_test.cpp  metric_test.cpp  model_test.cpp  optimizer_test.cpp  trainer_test.cpp  utils_test.cpp
